<resources>
    <string name="app_name">Shared Checklist</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_account">New Account?</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="existing_user">Existing User?</string>
    <string name="welcome">Welcome!</string>
    <string name="intro_text">Your Checklists</string>
    <string name="title_activity_maiddn">MaiddnActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="friends_text">Your Friends</string>
    <string name="groups_text">Your Groups</string>
    <string name="manage_groups">Manage groups</string>
    <string name="create_a_new_reminder">Create a new reminder</string>
    <string name="manage_friends">Manage Friends</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="manage_checklists">Manage checklists</string>
    <string name="send_friend_request">Send friend request</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>